# dataframe

./: Cargo.toml  README.md
sample-datasets/: make-avro.py  nyctaxi.snappy.parquet  participants.avro
src/: avrofile.rs  cli.rs  cli.yaml  commands.rs  main.rs  parquet.rs
src/avrofile/: error.rs  io.rs  mod.rs
src/df/: avro.rs  mod.rs  parquet.rs  utils.rs
src/ds/: avro.rs  error.rs  mod.rs  parquet.rs  utils.rs
src/parquetfile/: error.rs  mod.rs
tests/: avro.rs  parquet.rs
