[package]
name = "dataset"
version = "0.2.3-alpha.0"
authors = ["Amr Hassan <amr.hassan@gmail.com>"]
edition = "2018"
description = "CLI for introspecting datasets (Avro, Parquet)"
license = "MIT"

[dependencies]
thrift = "0.0.4"
clap = {version = "2.33", features = ["yaml"]}
avro-rs = "0.6"
parquet-format = "2.5"

[dev-dependencies]
assert_cmd = "0.11"